--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     <title>Document</title>
 </head>
 
-
 <body>
     <div class=" my-5">
         <div class="container">
@@ -83,7 +82,11 @@
             </div>
         </div>
     </div>
-</body>
 
+
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/employee.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+</body>
 
 </html>
